# IsaacMM

./: .gitignore  .readthedocs.yaml  IsaacMM-Linux.spec  IsaacMM-MacOS.spec  IsaacMM-Windows.spec  LICENSE  README.md  TODO_CONTROLLER.txt  build-linux.sh  build-macos.sh  build-windows.ps1  conf.py  config.toml  game_versions.json  gui.py  icon.icns  libisaac.py  main.py  masterlist.yaml  pyproject.toml  requirements.txt  setup.py  tboi_mod_sort.py  util.py
.github/: AGENTS.md  CODEMAP.md  PROGRESS.md
.github/workflows/: build-appimage.yml  build-flatpak.yml  build-macos.yml  build-windows.yml  python-build.yml  release.yml
assets/: styles.qss
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  requirements.txt  usage.rst
packaging/appimage/: IsaacMM-Linux.spec  build.sh
packaging/flatpak/: io.github.PetricaT.IsaacMM.metainfo.xml  io.github.PetricaT.IsaacMM.yml  isaacmm.sh
packaging/macos/: IsaacMM-MacOS.spec  build.sh
packaging/shared/: IsaacMM-appimage.desktop  IsaacMM-flatpak.desktop
packaging/windows/: IsaacMM-Windows.spec  build.ps1
source/: __init__.py  backup.py  config.py  conflict_index.py  controller.py  database.py  folder.py  folder_watcher.py  game_versions.py  logger.py  models.py  modlist_io.py  notifications.py  paths.py  remote_cache.py  sort.py  sorter.py  theme.py  theme_io.py  updater.py  widgets.py  window.py  worker.py
tests/: conftest.py  test_backup.py  test_conflict_index.py  test_database.py  test_game_versions.py  test_modlist.py  test_paths.py  test_sorter.py  test_updater.py  test_widgets.py
(+57 files in other folders)
