[project]
name = "IsaacMM"
version = "v0.5.5"
description = "The Binding of Isaac Mod Manager"
requires-python = ">=3.14"
dependencies = [
    "PySide6",
    "toml",
    "pyyaml",
    "PySDL3",
    "platformdirs",
    "loguru",
    "httpx",
    "tenacity",
    "packaging",
    "rapidfuzz",
    "notify-py",
    "watchdog",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
